# flower_run_multi

./: README.md
flower_scratch/: experiments_config.yaml  flwr_run_multi.sh  pyproject.toml  run_experiments.py
flower_scratch/flower_scratch/: client_app.py  custom_strategy.py  server_app.py  task.py
